Fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -227,6 +227,7 @@ main {
 
 .projectDescription {
   width: 350px;
+  height: 150px;
   margin: 10px;
   padding: 10px;
   margin: 0 auto;
@@ -426,6 +427,7 @@ a {
 
   .projectDescription {
     font-size: 20px;
+    height: 220px;
   }
 
   .petBuddiesPic {
